style: fix code smells final